<resources>
    <string name="app_name">Android-HabitRevamp</string>

    <string name="hello_world">Hello world!</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_new_habit">NewHabitActivity</string>

    <!-- New Habit Layout Strings -->
    <string name="new_habit_title_label">Title</string>
    <string name="new_habit_subtitle_label">Notes</string>
    <string name="new_habit_start_date_button">Select Start Date</string>
    <string name="new_habit_save_button">Save</string>
    <string name="title_activity_habit_detail">HabitDetailActivity</string>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_delete_item">Delete</string>
    <string name="action_edit">Edit</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
