<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="me.anhvannguyen.android.android_habitrevamp.HabitDetailActivity">
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_delete_item"
        android:title="@string/action_delete_item"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
