<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_habit_title_label"/>

    <EditText
        android:id="@+id/habit_title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_habit_subtitle_label"/>

    <EditText
        android:id="@+id/habit_subtitle_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/habit_select_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_habit_start_date_button"/>

    <TextView
        android:id="@+id/habit_start_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/habit_end_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Everyday of the week"
        android:checked="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sunday"
            android:textOff="Sun"
            android:textOn="Sun"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monday"
            android:textOff="Mon"
            android:textOn="Mon"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuesday"
            android:textOff="Tues"
            android:textOn="Tues"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday"
            android:textOff="Wed"
            android:textOn="Wed"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thusday"
            android:textOff="Thur"
            android:textOn="Thur"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Friday"
            android:textOff="Fri"
            android:textOn="Fri"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Saturday"
            android:textOff="Sat"
            android:textOn="Sat"/>

        </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/habit_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_habit_save_button"/>


</LinearLayout>